--- a/src/Components/AuthArea/AuthMenu/AuthMenu.css
+++ b/src/Components/AuthArea/AuthMenu/AuthMenu.css
@@ -1,16 +1,25 @@
 .AuthMenu {
 	position: absolute;
-    right: 20px;
-    top: 10px;
+    right: 30px;
+    top: 30px;
+    color:white;
+/* width: 30px; */
 }
 
 .AuthMenu a{
-    color: rgb(255, 255, 255);
+    color:white;
+    
 }
 .AuthMenu a:hover{
-    border: 1px solid rgb(109, 107, 107) ;padding:5px;
+    /* border: 1px solid rgb(109, 107, 107) ;padding:5px; */
+    font-size: 45px;
+
 }
 
 .AuthMenu span{
-    color: rgb(238, 49, 49);
+    color:white;
+    font-size: 35px;
 }
+
+
+
