--- a/src/Components/AuthArea/Login/Login.css
+++ b/src/Components/AuthArea/Login/Login.css
@@ -1,13 +1,37 @@
-.Login input, .Login select,.Login button{
-	/* border-radius: 5px; */
-    margin-bottom: 15px;
-}
+/* .Login input, .Login select,.Login button{
+	margin-top: 20px;
+padding: 10px;
 
-.Login button{
+} */
+ /* .Login button{
+	margin-top: 20px;
+padding: 10px;
+
+} */
+.Login #button{
     background-color: brown;
     color: white;
+    /* padding-top: 20px; */
+    margin-top: 20px;
+    padding: 10px;
 }
 
 .Login form{
     border: 2px solid black;
-    }
+    width: 370px;
+    /* background-image: linear-gradient(45deg, rgb(24, 22, 9), rgb(243, 209, 97)); */
+}
+.Login .eye{
+font-size: 40px;
+color: rgb(0, 4, 7);
+}
+.Login #password ,.Login #email{
+padding-top: 20px;
+    width: 100%;
+
+}
+
+
+
+
+
