--- a/src/Components/AuthArea/Login/Login.css
+++ b/src/Components/AuthArea/Login/Login.css
@@ -9,13 +9,16 @@ padding: 10px;
 
 } */
 .Login #button{
-    background-color: brown;
+    background-color: rgb(197, 153, 31);
     color: white;
     /* padding-top: 20px; */
     margin-top: 20px;
     padding: 10px;
 }
-
+.Login #button:hover{
+    
+ background-color: rgb(107, 97, 7);
+}
 .Login form{
     border: 2px solid black;
     width: 370px;
