--- a/src/Components/AuthArea/AuthMenu/AuthMenu.css
+++ b/src/Components/AuthArea/AuthMenu/AuthMenu.css
@@ -2,24 +2,67 @@
 	position: absolute;
     right: 30px;
     top: 30px;
-    color:white;
 /* width: 30px; */
 }
 
 .AuthMenu a{
-    color:white;
+    color:rgb(255, 255, 255);
     
 }
-.AuthMenu a:hover{
+.AuthMenu #login:hover{
     /* border: 1px solid rgb(109, 107, 107) ;padding:5px; */
     font-size: 45px;
 
 }
 
-.AuthMenu span{
+.AuthMenu #login{
     color:white;
     font-size: 35px;
 }
+.AuthMenu #logout{
+    color:white;
+    font-size: 20px;
+}
+.AuthMenu #logout:hover{
+    border: 1px solid rgb(109, 107, 107) ;padding:5px;
+    /* font-size: 45px; */
+
+}
+/* .AuthMenu a :active{
+font-size: 20px;
+border: 1px solid blue;
+border-radius: 50px ;
+} */
+.AuthMenu #details :hover{
+    border: 1px solid  rgb(109, 107, 107) ;padding:5px;
+    border-radius: 50px ;
+    font-size: 20px ;
+    color: blue;
+    /* float: right; */
+    }
+
+    .AuthMenu #bag{
+        /* position: absolute; */
+        /* position: unset; */
+        /* right: 3%; */
+        /* top: 20px; */
+        margin-top: 40px;
+        /* text-decoration: none;  */
+        /* transform: scale(1.1);  */
+        color: white;
+    font-size: 30px;
+    float: right;
+
+}
+    
+    .AuthMenu #count{
+        /* position: fixed; */
+        /* top: 14%; */
+    font-size: 10px;
+    float: right;
+    margin-top: 40px;
+    /* margin-right: 35px; */
+    }
 
 
 
