--- a/src/Components/HomeArea/About/About.css
+++ b/src/Components/HomeArea/About/About.css
@@ -1,12 +1,13 @@
-.About div{
-	border: 2px solid rgb(179, 25, 25);
+.About {
+	border: 2px solid rgb(110, 104, 8);
     border-radius: 25px;
+    margin:20px auto;
     width: 900px;
+    
     padding: 20px;
-    margin:auto;
 text-align: left;
 box-shadow: 8px 8px 8px;
-color: rgb(114, 35, 35);
+color: rgb(145, 115, 17);
 /* font-family:  Garamond,Serif,  ; */
 font-size: 18px;
 font-family:Garamond, Verdana,sans-serif,Helvetica, Arial ;
