--- a/src/Components/HomeArea/Home/Home.css
+++ b/src/Components/HomeArea/Home/Home.css
@@ -12,7 +12,7 @@ margin-top:15px;
     margin-top: 10px;
     padding-left: 1px; */
     /* font-family: cursive,Serif, Garamond, "Courier New" ; */
-color: rgb(134, 10, 10);
+color: rgb(114, 116, 6);
 }
 .Home h2{
 	padding-top: 50px;
@@ -31,21 +31,22 @@ color: rgb(134, 10, 10);
 	/* float: inline-start; */
 	width: 100px;
 	margin-bottom: 50px;
-	background-color: rgb(182, 130, 18);
-	color: black;
+	background-color: rgb(255, 255, 255);
+	color: rgb(179, 151, 29);
 	margin-left: 10px;
 	margin-right: 10px;
 	font-size: 15px;
+	font-family:Garamond, Verdana,sans-serif,Helvetica, Arial ;
+border: 1.5px solid white;
+box-sizing: border-box;
 
 }
-/* .Home #button{
-	margin-top: 0px;
-	padding-top: 0px;
-	float: inline-end;
-	margin-right: 280px;
-} */
+.Home button:hover{
+	/* border: 1.5px solid rgb(0, 0, 0); */
+font-weight: bolder;
+}
 
-
+/* 
 .fluttering{
     -webkit-animation: fluttering .90s linear infinite; 
 	-moz-animation: fluttering .20s linear infinite;
@@ -82,7 +83,7 @@ color: rgb(134, 10, 10);
 	0% { opacity: 1; }
 	50.01% { opacity: 0; }
 	50% { opacity: 0; }
-}
+} */
 .Home form{
 	float: right;
 	right: auto;
