--- a/src/Components/LayoutArea/Menu/Menu.css
+++ b/src/Components/LayoutArea/Menu/Menu.css
@@ -9,8 +9,8 @@ background-color: black;
 
 }
 .Menu .active{
-    background-color:hsl(46, 88%, 35%);
-    color: white;
+   color:white;
+    /* background-color:hsl(46, 88%, 35%); */
     font-weight: bold;
     font-family: Serif, Garamond, "Courier New" ;
     padding: 10px;
@@ -22,32 +22,72 @@ background-color: black;
 .Menu a{
     height: 10px;
 width: 200px;
-	color: white;
-    padding-left: 20px;
+color:hsl(46, 88%, 35%) ;
+   padding-left: 20px;
     padding-right: 20px;
-   
-    
-
+   /* float: left; */
+margin-bottom: 0px;
 }
 .Menu .NavLink{
     height: 10px;
     width: 200px;
         color: white;
         padding: 10px;
+        /* float: left; */
 
 }
 
 .Menu span{
     font-weight: bold;
 
+    
 }
 
 .Menu a:hover{
-    background-color: rgba(238, 39, 39, 0.466);
+    /* background-color: white; */
     height: 40px;
     width: 200px;
     padding: 10px;
     padding-left: 20px;
     padding-right: 20px;
-    border: 1px solid rgb(255, 255, 255);
-  }
+    border: 1px solid rgb(189, 163, 18);
+    /* font-weight: bold; */
+
+}
+
+.Menu #bag{
+    /* position: absolute; */
+    /* position: unset; */
+    margin-right: 20px;
+    /* top: 20px; */
+    /* margin-top: 20px; */
+    /* text-decoration: none;  */
+    /* transform: scale(1.1);  */
+    color: white;
+font-size: 30px;
+float: right;
+/* margin-bottom: 20px; */
+}
+/* .Menu #bag:hover{
+border: 1px solid black;
+} */
+
+.Menu #count{
+    /* position: fixed; */
+    /* top: 14%; */
+font-size: 10px;
+float: right;
+/* margin-top: 20px; */
+/* margin-right: 35px; */
+}
+
+.Menu #myCoupons:hover{
+border: none;
+}
+.Menu #myCoupons .active{
+    border: none;
+        }
+
+    .Menu #spanBag .active{
+        border: none;
+              }
