--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ html, body , option, button, #root{
   margin: 0;
   height: 100%;
   text-align: center;
-  color: brown;
+  color: rgb(192, 161, 23);
   background-color: white;
   
   /* background-image: linear-gradient(45deg, rgb(1, 67, 88), rgb(233, 19, 204)); */
