--- a/src/Components/CustomerArea/AllCouponList/AllCouponList.css
+++ b/src/Components/CustomerArea/AllCouponList/AllCouponList.css
@@ -1,10 +1,10 @@
-.AllCouponList input,.AllCouponList select{
+/* .AllCouponList input,.AllCouponList select{
 	width: 250px;
     border: 2px solid rgb(155, 19, 19);
     border-radius: 5px;
 margin: 20px;
 	
-}
+} */
 
 .AllCouponList #list-top-coupons{
     position: absolute;
@@ -13,4 +13,74 @@ margin: 20px;
   
 }
 
+.AllCouponList button{
+	margin-top: 0px;
+	/* padding-top: 0; */
+	/* float: inline-start; */
+	width: 100px;
+	margin-bottom: 50px;
+	background-color: white;
+	color: rgb(133, 111, 17);
+	margin-left: 10px;
+	margin-right: 10px;
+	font-size: 12px;
+border: 1.5px solid black;
+border-top: none;
+/* box-sizing: border-box; */
+height: 40px;
+font-family: cursive,Serif, Garamond, "Courier New";
+font-weight: bolder;
+}
+.AllCouponList button:hover{
+	font-weight: bolder;
+border: 1.5px solid black;
+/* background-color: white; */
+background-color: black;
+	color: rgb(133, 111, 17);
+	border-top: none;
 
+}
+
+.AllCouponList form{
+	float: right;
+	/* right: auto; */
+	margin-right: 50px;
+	height: 21px;
+	width: 200px;
+	font-size: 23px;
+	box-shadow: 5px 5px 10px;
+	margin-top:0px;
+	border: 1px solid black;
+border-radius: 0px;
+border-top: none;
+
+  }
+  
+  .AllCouponList #name{
+	font-size: 13px;
+	width: 170px;
+	/* margin: 0; */
+  float: right;
+
+  }
+
+  .AllCouponList .formPrice{
+    float: left;
+    /* right: auto; */
+    margin-left: 160px;
+    font-size: 15px;
+    width:140px;
+
+    
+  }
+  
+  
+
+  .AllCouponList #price{
+    font-size: 13px;
+    width: 65px;
+    /* margin: 0; */
+    float: left;
+  margin-left: 75px;
+  margin-top: -18px;
+    }
