--- a/src/Components/HomeArea/Home/Home.css
+++ b/src/Components/HomeArea/Home/Home.css
@@ -26,25 +26,33 @@ color: rgb(114, 116, 6);
 }
 
 .Home button{
-	margin-top: 0;
+	margin-top: 0px;
 	/* padding-top: 0; */
 	/* float: inline-start; */
 	width: 100px;
 	margin-bottom: 50px;
-	background-color: rgb(255, 255, 255);
-	color: rgb(179, 151, 29);
+	background-color: white;
+	color: rgb(133, 111, 17);
 	margin-left: 10px;
 	margin-right: 10px;
-	font-size: 15px;
-	font-family:Garamond, Verdana,sans-serif,Helvetica, Arial ;
-border: 1.5px solid white;
-box-sizing: border-box;
-
-}
-.Home button:hover{
-	/* border: 1.5px solid rgb(0, 0, 0); */
+	font-size: 12px;
+border: 1.5px solid black;
+border-top: none;
+/* box-sizing: border-box; */
+height: 40px;
+font-family: cursive,Serif, Garamond, "Courier New";
 font-weight: bolder;
 }
+.Home button:hover{
+	font-weight: bolder;
+border: 1.5px solid black;
+/* background-color: white; */
+background-color: black;
+	color: rgb(133, 111, 17);
+	border-top: none;
+
+}
+
 
 /* 
 .fluttering{
@@ -86,19 +94,23 @@ font-weight: bolder;
 } */
 .Home form{
 	float: right;
-	right: auto;
-	margin-right: 20px;
+	/* right: auto; */
+	margin-right: 50px;
 	height: 21px;
 	width: 200px;
 	font-size: 23px;
 	box-shadow: 5px 5px 10px;
-	margin-top:5px;
+	margin-top:0px;
+	border: 1px solid black;
+border-radius: 0px;
+border-top: none;
 
   }
   
   .Home input{
 	font-size: 13px;
 	width: 170px;
-	margin: 0;
+	/* margin: 0; */
   float: right;
+
   }
