--- a/src/Components/LayoutArea/Menu/Menu.css
+++ b/src/Components/LayoutArea/Menu/Menu.css
@@ -17,7 +17,7 @@ background-color: black;
     border: 1px solid white;
     padding-left: 20px;
     padding-right: 20px;
-
+border-bottom: none;
 }
 .Menu a{
     height: 10px;
