--- a/src/Components/LayoutArea/Layout/Layout.css
+++ b/src/Components/LayoutArea/Layout/Layout.css
@@ -4,7 +4,10 @@
     display: grid;
     grid-template-rows: 20% 75% 5%;
     grid-template-columns: repeat(6,1fr);
-   
+   /* width: 100%; */
+   overflow: auto ;
+width: auto;
+
 }
 
 .Layout header{
