--- a/src/Components/AuthArea/AuthMenu/AuthMenu.css
+++ b/src/Components/AuthArea/AuthMenu/AuthMenu.css
@@ -1,6 +1,6 @@
 .AuthMenu {
 	position: absolute;
-    right: 30px;
+    right: 25px;
     top: 30px;
 /* width: 30px; */
 }
@@ -9,24 +9,34 @@
     color:rgb(255, 255, 255);
     
 }
-.AuthMenu #login:hover{
+.AuthMenu .login:hover{
     /* border: 1px solid rgb(109, 107, 107) ;padding:5px; */
-    font-size: 45px;
+    font-size: 50px;
 
 }
 
-.AuthMenu #login{
+.AuthMenu .out{
+    font-size: 25px;
+    /* margin-top: 2px; */
+    float: right;
+margin-top: -2px;
+}
+
+.AuthMenu .login{
     color:white;
     font-size: 35px;
+    margin-right: 15px;
 }
 .AuthMenu #logout{
     color:white;
-    font-size: 20px;
+    font-size: 15px ;
+    
+    /* float: right; */
+    
 }
-.AuthMenu #logout:hover{
-    border: 1px solid rgb(109, 107, 107) ;padding:5px;
-    /* font-size: 45px; */
-
+.AuthMenu #logout :hover{
+    /* border: 1px solid rgb(109, 107, 107) ;padding:5px; */
+color:blue
 }
 /* .AuthMenu a :active{
 font-size: 20px;
@@ -34,9 +44,9 @@ border: 1px solid blue;
 border-radius: 50px ;
 } */
 .AuthMenu #details :hover{
-    border: 1px solid  rgb(109, 107, 107) ;padding:5px;
-    border-radius: 50px ;
-    font-size: 20px ;
+    /* border: 1px solid  rgb(109, 107, 107) ;padding:5px; */
+    /* border-radius: 50px ; */
+    /* font-size: 20px ; */
     color: blue;
     /* float: right; */
     }
