--- a/src/Components/CompanyArea/CouponList/CouponList.css
+++ b/src/Components/CompanyArea/CouponList/CouponList.css
@@ -1,9 +1,9 @@
-.CouponList input,.CouponList select{
+/* .CouponList input,.CouponList select{
 	width: 250px;
     border: 2px solid rgb(155, 19, 19);
     border-radius: 5px;
 margin: 20px;
-}
+} */
 
 .CouponList #list-top-coupon{
     position: absolute;
@@ -11,3 +11,73 @@ margin: 20px;
   margin-bottom: 20px;
   
 }
+
+.CouponList button{
+	margin-top: 0px;
+	/* padding-top: 0; */
+	/* float: inline-start; */
+	width: 100px;
+	margin-bottom: 50px;
+	background-color: white;
+	color: rgb(189, 163, 18);
+	margin-left: 10px;
+	margin-right: 10px;
+	font-size: 12px;
+border: 1.5px solid black;
+border-top: none;
+/* box-sizing: border-box; */
+height: 40px;
+font-family: cursive,Serif, Garamond, "Courier New";
+font-weight: bolder;
+}
+.CouponList button:hover{
+	font-weight: bolder;
+border: 1.5px solid black;
+/* background-color: white; */
+background-color: black;
+	color:  rgb(189, 163, 18);
+	border-top: none;
+
+}
+.CouponList form{
+	float: right;
+	/* right: auto; */
+	margin-right: 50px;
+	height: 21px;
+	width: 200px;
+	font-size: 23px;
+	box-shadow: 5px 5px 10px;
+	margin-top:0px;
+	border: 1px solid black;
+border-radius: 0px;
+border-top: none;
+
+  }
+.CouponList #name{
+	font-size: 13px;
+	width: 170px;
+	/* margin: 0; */
+  float: right;
+
+  }
+
+  .CouponList .formPrice{
+    float: left;
+    /* right: auto; */
+    margin-left: 160px;
+    font-size: 15px;
+    width:140px;
+
+    
+  }
+  
+  
+
+  .CouponList #price{
+    font-size: 13px;
+    width: 65px;
+    /* margin: 0; */
+    float: left;
+  margin-left: 75px;
+  margin-top: -18px;
+    }
