--- a/src/Components/AdminArea/AdminArea/AdminArea.css
+++ b/src/Components/AdminArea/AdminArea/AdminArea.css
@@ -1,6 +1,6 @@
 .AdminArea {
 	text-align: left;
-    border: 2px solid rgb(94, 19, 19);
+    border: 2px solid rgb(0, 0, 0);
     border-radius: 25px;
     width: 850px;
     padding: 30px;
@@ -9,4 +9,5 @@ text-align: left;
 box-shadow: 8px 8px 8px;
 margin-top: 70px;
 font-family:  Garamond,Serif, "Courier New" ;
+color:  rgb(189, 163, 18);
 }
