--- a/src/Components/CompanyArea/AddCoupon/AddCoupon.css
+++ b/src/Components/CompanyArea/AddCoupon/AddCoupon.css
@@ -7,9 +7,11 @@ border: 2px solid black;
 .AddCoupon button{
     font-family: Garamond,Serif,  "Courier New" ;
 border-radius: 5px;
-background-color: brown;
+background-color: rgb(189, 163, 18);
 color: white;
-margin-top: 10px;
+margin-top: 20px;
+margin-bottom: 20px;
+
 }
 
 .AddCoupon span{
