--- a/src/Components/CompanyArea/CouponDetails/CouponDetails.css
+++ b/src/Components/CompanyArea/CouponDetails/CouponDetails.css
@@ -21,22 +21,22 @@ transform: translate(-50% ,-50%);
   text-align: center;
 }
 .CouponDetails a{
-  color: rgb(175, 23, 23);
-  color: white;
+  /* color: rgb(189, 163, 18); */
+  color: black;
 
   /* background-color: aliceblue; */
   
 }
 .CouponDetails button{
-  background-color: rgb(255, 255, 255);
+  /* background-color: rgb(255, 255, 255); */
   border: 1px solid rgb(2, 2, 2);
 font-size: 15px;
-  border-radius: 10px;
+  border-radius: 5px;
   width: 80px;
   height: 30px;
   margin: 5px;
-  color: white;
-    background-color: brown;
+  color: black;
+    background-color:  rgb(189, 163, 18);
 }
 .CouponDetails img{
 border: 1.5px solid rgb(0, 0, 0);
