--- a/src/Components/CompanyArea/UpdateCoupon/UpdateCoupon.css
+++ b/src/Components/CompanyArea/UpdateCoupon/UpdateCoupon.css
@@ -1,13 +1,14 @@
 .UpdateCoupon button{
     border: 1px solid rgb(0, 0, 0);
-    border-radius: 10px;
-    width: 150px;
-    height: 30px;
+    border-radius: 5px;
+    /* width: 150px; */
+    height: 35px;
     padding-top: 4px;
 	font-size: 15px;
-    color: white;
-    background-color: brown;
+    color: black;
+    background-color:  rgb(168, 140, 14);
 margin-top: 10px;
+box-sizing: border-box;
 }
 .UpdateCoupon span{
     color: red;
