--- a/src/Components/LayoutArea/Menu/Menu.css
+++ b/src/Components/LayoutArea/Menu/Menu.css
@@ -22,11 +22,12 @@ border-bottom: none;
 .Menu a{
     height: 10px;
 width: 200px;
-color:hsl(46, 88%, 35%) ;
-   padding-left: 20px;
+color:  rgb(189, 163, 18);
+padding-left: 20px;
     padding-right: 20px;
    /* float: left; */
 margin-bottom: 0px;
+font-weight: bold;
 }
 .Menu .NavLink{
     height: 10px;
