--- a/src/Components/CustomerArea/CustomerArea/CustomerArea.css
+++ b/src/Components/CustomerArea/CustomerArea/CustomerArea.css
@@ -1,6 +1,6 @@
 .CustomerArea #div{
 	text-align: left;
-    border: 2px solid rgb(179, 25, 25);
+    border: 2px solid black;
     border-radius: 25px;
     width: 850px;
     padding: 30px;
