--- a/src/Components/CompanyArea/CouponList/CouponList.css
+++ b/src/Components/CompanyArea/CouponList/CouponList.css
@@ -12,6 +12,10 @@ margin: 20px;
   
 }
 
+.CouponList .form  :active{
+background-color: black;
+}
+
 .CouponList button{
 	margin-top: 0px;
 	/* padding-top: 0; */
