--- a/src/Components/AdminArea/CustomerList/CustomerList.css
+++ b/src/Components/AdminArea/CustomerList/CustomerList.css
@@ -1,7 +1,9 @@
-.CustomerList  #list-top-customer{
+.CustomerList .list-top-customer{
 	position: absolute;
   bottom: 0;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
+  float: right !important;
+  margin-right: 10px !important;
  }
  .CustomerList form{
   left: auto;
