--- a/src/Components/AuthArea/AuthMenu/AuthMenu.css
+++ b/src/Components/AuthArea/AuthMenu/AuthMenu.css
@@ -6,13 +6,12 @@
 }
 
 .AuthMenu a{
-    color:rgb(255, 255, 255);
-    
-}
+    color:white;
+}  
 .AuthMenu .login:hover{
     /* border: 1px solid rgb(109, 107, 107) ;padding:5px; */
     font-size: 50px;
-
+color: blue;
 }
 
 .AuthMenu .out{
@@ -24,7 +23,7 @@ margin-top: -2px;
 
 .AuthMenu .login{
     color:white;
-    font-size: 35px;
+    font-size: 45px;
     margin-right: 15px;
 }
 .AuthMenu #logout{
@@ -38,11 +37,15 @@ margin-top: -2px;
     /* border: 1px solid rgb(109, 107, 107) ;padding:5px; */
 color:blue
 }
-/* .AuthMenu a :active{
-font-size: 20px;
-border: 1px solid blue;
-border-radius: 50px ;
-} */
+
+
+.AuthMenu #details{
+font-size: 30px;  
+float: left;
+margin-top: -6px;
+margin-right: 5px;
+}
+
 .AuthMenu #details :hover{
     /* border: 1px solid  rgb(109, 107, 107) ;padding:5px; */
     /* border-radius: 50px ; */
