--- a/src/Components/HomeArea/Home/Home.css
+++ b/src/Components/HomeArea/Home/Home.css
@@ -33,7 +33,7 @@ margin-top:15px;
 	margin-bottom: 50px;
 	background-color: white;
 	color:  rgb(189, 163, 18);
-	margin-left: 10px;
+	margin-left: 0px;
 	margin-right: 10px;
 	font-size: 12px;
 border: 1.5px solid black;
@@ -50,8 +50,32 @@ border: 1.5px solid black;
 background-color: black;
 	color: rgb(133, 111, 17);
 	border-top: none;
-
 }
+
+.Home button:focus{
+	background-color: black;
+}
+
+.Home .formPrice{
+    float: left;
+    /* right: auto; */
+    margin-left: 70px;
+    font-size: 15px;
+    width:125px;
+margin-right: 0px;
+    
+  }
+  
+  
+
+  .Home #price{
+    font-size: 13px;
+    width: 50px;
+    /* margin: 0; */
+    float: left;
+  margin-left: 75px;
+  margin-top: -18px;
+    }
 
 
 /* 
