--- a/src/Components/LayoutArea/Menu/Menu.css
+++ b/src/Components/LayoutArea/Menu/Menu.css
@@ -69,9 +69,9 @@ font-size: 30px;
 float: right;
 /* margin-bottom: 20px; */
 }
-/* .Menu #bag:hover{
-border: 1px solid black;
-} */
+.Menu #bag:hover{
+color: blue;
+}
 
 .Menu #count{
     /* position: fixed; */
