--- a/src/Components/CustomerArea/AllCouponList/AllCouponList.css
+++ b/src/Components/CustomerArea/AllCouponList/AllCouponList.css
@@ -1,24 +1,16 @@
-/* .AllCouponList input,.AllCouponList select{
-	width: 250px;
-    border: 2px solid rgb(155, 19, 19);
-    border-radius: 5px;
-margin: 20px;
-	
-} */
-
-.AllCouponList #list-top-coupons{
-    position: absolute;
-  bottom: 0;
-  margin-bottom: 20px;
-  
+.AllCouponList .list-top-coupons{
+	position: absolute;
+    bottom: 0;
+    margin-bottom: 30px ;
+    float: right !important;
+    margin-right: 10px !important;
 }
+
 .AllCouponsList button:focus {
 	background-color:black !important;
 	}
 .AllCouponList button{
 	margin-top: 0px;
-	/* padding-top: 0; */
-	/* float: inline-start; */
 	width: 100px;
 	margin-bottom: 50px;
 	background-color: white;
@@ -28,7 +20,6 @@ margin: 20px;
 	font-size: 12px;
 border: 1.5px solid black;
 border-top: none;
-/* box-sizing: border-box; */
 height: 40px;
 font-family: cursive,Serif, Garamond, "Courier New";
 font-weight: bolder;
@@ -36,16 +27,13 @@ font-weight: bolder;
 .AllCouponList button:hover{
 	font-weight: bolder;
 border: 1.5px solid black;
-/* background-color: white; */
 background-color: black;
 	color:  rgb(189, 163, 18);
 	border-top: none;
-
 }
 
 .AllCouponList form{
 	float: right;
-	/* right: auto; */
 	margin-right: 50px;
 	height: 21px;
 	width: 200px;
@@ -55,36 +43,28 @@ background-color: black;
 	border: 1px solid black;
 border-radius: 0px;
 border-top: none;
-
   }
   
   .AllCouponList #name{
 	font-size: 13px;
 	width: 170px;
-	/* margin: 0; */
   float: right;
-
   }
 
   .AllCouponList .formPrice{
     float: left;
-    /* right: auto; */
     margin-left: 160px;
     font-size: 15px;
     width:140px;
-
-    
-  }
+   }
   
 .AllCouponList button:focus{
 	background-color: black;
 }
   
-
   .AllCouponList #price{
     font-size: 13px;
     width: 65px;
-    /* margin: 0; */
     float: left;
   margin-left: 75px;
   margin-top: -18px;
