--- a/src/Components/HomeArea/Home/Home.css
+++ b/src/Components/HomeArea/Home/Home.css
@@ -7,28 +7,23 @@ margin-top: 0;
 margin-left: 20px;
 float: left;
 margin-top:15px;
-    /* position: absolute; */
-    /* top: 1px;
-    margin-top: 10px;
-    padding-left: 1px; */
-    /* font-family: cursive,Serif, Garamond, "Courier New" ; */
-	color:  rgb(189, 163, 18);
+ color:  rgb(189, 163, 18);
 }
 .Home h2{
 	padding-top: 50px;
 	text-align: center;
 
 }
-.Home #top{
-    position: absolute;
+.Home .top{
+	position: absolute;
     bottom: 0;
-    margin-bottom: 20px;
+    margin-bottom: 30px ;
+    float: right !important;
+    margin-right: 10px !important;
 }
 
 .Home button{
 	margin-top: 0px;
-	/* padding-top: 0; */
-	/* float: inline-start; */
 	width: 100px;
 	margin-bottom: 50px;
 	background-color: white;
@@ -38,7 +33,6 @@ margin-top:15px;
 	font-size: 12px;
 border: 1.5px solid black;
 border-top: none;
-/* box-sizing: border-box; */
 height: 40px;
 font-family: cursive,Serif, Garamond, "Courier New";
 font-weight: bolder;
@@ -46,11 +40,11 @@ font-weight: bolder;
 .Home button:hover{
 	font-weight: bolder;
 border: 1.5px solid black;
-/* background-color: white; */
 background-color: black;
 	color: rgb(133, 111, 17);
 	border-top: none;
 }
+
 
 .Home button:focus{
 	background-color: black;
@@ -58,20 +52,15 @@ background-color: black;
 
 .Home .formPrice{
     float: left;
-    /* right: auto; */
     margin-left: 70px;
     font-size: 15px;
     width:125px;
 margin-right: 0px;
-    
-  }
+     }
   
-  
-
-  .Home #price{
+	 .Home #price{
     font-size: 13px;
     width: 50px;
-    /* margin: 0; */
     float: left;
   margin-left: 75px;
   margin-top: -18px;
@@ -118,7 +107,6 @@ margin-right: 0px;
 } */
 .Home form{
 	float: right;
-	/* right: auto; */
 	margin-right: 50px;
 	height: 21px;
 	width: 200px;
@@ -128,13 +116,10 @@ margin-right: 0px;
 	border: 1px solid black;
 border-radius: 0px;
 border-top: none;
-
   }
   
   .Home input{
 	font-size: 13px;
 	width: 170px;
-	/* margin: 0; */
   float: right;
-
   }
