--- a/src/Components/AdminArea/UpdateCustomer/UpdateCustomer.css
+++ b/src/Components/AdminArea/UpdateCustomer/UpdateCustomer.css
@@ -1,25 +1,29 @@
-.UpdateCustomer button{
+.UpdateCustomer button {
     border: 1px solid rgb(0, 0, 0);
     border-radius: 5px;
-    height: 40px;
+    /* height: 40px; */
     padding-top: 4px;
-	font-size: 15px;
+    font-size: 15px;
     color: white;
     background-color: rgb(189, 163, 18);
-margin-top: 10px;
-box-sizing: border-box;
+    margin-top: 10px;
+    box-sizing: border-box;
 
 }
-.UpdateCustomer input{
+
+.UpdateCustomer input {
     margin-bottom: 10px;
+    box-sizing: border-box;
+    width: 300px;
 
 }
-.UpdateCustomer span{
-    position: absolute;
-    margin-left:20px ;
-    color: red;
-    }
 
- .UpdateCustomer form{
-        border: 1px solid black;
- }
+.UpdateCustomer span {
+    position: absolute;
+    margin-left: 20px;
+    color: red;
+}
+
+.UpdateCustomer form {
+    border: 1px solid black;
+}
