--- a/src/Components/CompanyArea/CouponDetails/CouponDetails.css
+++ b/src/Components/CompanyArea/CouponDetails/CouponDetails.css
@@ -1,40 +1,43 @@
 .CouponDetails {
-	display: inline-block;
+  display: inline-block;
   border: 2px solid black;
   padding: 10px;
   margin: 30px;
   border-radius: 10px;
   box-shadow: 5px 5px 10px;
-  font-family: Garamond,Serif,  "Courier New" ;
+  font-family: Garamond, Serif, "Courier New";
   text-align: left;
 }
-.CouponDetails .img{
-width: 100%;
-margin: auto;
-cursor: pointer;
-transform: translate(-50% ,-50%);
--ms-transform:  translate(-50% ,-50%);
+
+.CouponDetails .img {
+  width: 100%;
+  margin: auto;
+  cursor: pointer;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
 }
 
 .CouponDetails {
   text-align: center;
 }
-.CouponDetails a{
+
+.CouponDetails a {
   color: black;
 }
 
-.CouponDetails button{
-border: 1px solid rgb(2, 2, 2);
-font-size: 15px;
- border-radius: 5px;
- width: 80px;
- height: 30px;
- margin: 5px;
- color: black;
- background-color:  rgb(189, 163, 18);
+.CouponDetails button {
+  border: 1px solid rgb(2, 2, 2);
+  font-size: 12px;
+  border-radius: 5px;
+  width: auto;
+  height: 30px;
+  margin: 5px;
+  color: black;
+  background-color: rgb(189, 163, 18);
 }
-.CouponDetails img{
-border: 1.5px solid rgb(0, 0, 0);
-width: 200px;
+
+.CouponDetails img {
+  border: 1.5px solid rgb(0, 0, 0);
+  width: 200px;
   height: 130px;
 }
