--- a/src/Components/AdminArea/AddCompany/AddCompany.css
+++ b/src/Components/AdminArea/AddCompany/AddCompany.css
@@ -1,24 +1,31 @@
-.AddCompany button{
-	border: 1px solid black;
+.AddCompany button {
+    border: 1px solid black;
     border-radius: 5px;
     background-color: rgb(189, 163, 18);
     color: black;
     margin-top: 10px;
     height: 40px;
-}
-.AddCompany select, .AddCompany input{
-    border-radius: 5px;
+    box-sizing: border-box;
+
 }
 
-.AddCompany span{
+.AddCompany .TextField,
+.AddCompany input {
+    border-radius: 5px;
+    box-sizing: border-box;
+    width: 300px;
+    margin-top: 5px;
+
+}
+
+
+.AddCompany span {
     position: absolute;
-    margin-left:20px ;
+    margin-left: 20px;
     color: red;
-    }
-    .AddCompany input, .AddCompany button{
-        margin-bottom: 10px;
-    }
-    
-.AddCompany form{
+}
+
+
+.AddCompany form {
     border: 2px solid black;
-    }
+}
