--- a/src/Components/CompanyArea/CompanyArea/CompanyArea.css
+++ b/src/Components/CompanyArea/CompanyArea/CompanyArea.css
@@ -1,13 +1,12 @@
 .CompanyArea {
     text-align: left;
-    border: 2px solid rgb(168, 140, 14);
+    border: 2px solid black;
     border-radius: 25px;
     width: 850px;
     padding: 30px;
     margin: auto;
-text-align: left;
-box-shadow: 8px 8px 8px;
-margin-top: 70px;
-font-family:  Garamond,Serif, "Courier New" ;
+    text-align: left;
+    box-shadow: 8px 8px 8px;
+    margin-top: 70px;
+    font-family: Garamond, Serif, "Courier New";
 }
-
