--- a/src/Components/CompanyArea/CouponList/CouponList.css
+++ b/src/Components/CompanyArea/CouponList/CouponList.css
@@ -1,72 +1,75 @@
-.CouponList .list-top-coupon{
-	position: absolute;
-    bottom: 0;
-    margin-bottom: 40px ;
-    float: right !important;
-    margin-right: 10px !important;
+.CouponList .list-top-coupon {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 40px;
+  float: right !important;
+  margin-right: 10px !important;
+}
+
+.CouponList Button {
+  margin-top: 0px;
+  width: 110px;
+  margin-bottom: 50px;
+  background-color: white;
+  color: rgb(189, 163, 18);
+  margin-left: 0px;
+  margin-right: 10px;
+  font-size: 12px;
+  font-family: cursive, Serif, Garamond, "Courier New";
+  border: 1px solid rgb(145, 137, 137);
+  border-top: none;
+  height: 40px;
+  padding: 0px;
+  font-weight: bolder;
+}
+
+.CouponList Button:hover {
+  background-color: rgba(128, 127, 124, 0.137);
+  border: 2px solid black;
+  border-top: none;
 }
 
 .CouponList button:focus {
-background-color:black !important;
+  background-color: black;
+  border: 2px solid rgb(189, 163, 18);
+  border-top: none;
 }
 
-.CouponList button{
-margin-top: 0px;
-width: 100px;
-margin-bottom: 50px;
-background-color: white;
-color: rgb(189, 163, 18);
-margin-left: 10px;
-margin-right: 10px;
-font-size: 12px;
-border: 1.5px solid black;
-border-top: none;
-height: 40px;
-font-family: cursive,Serif, Garamond, "Courier New";
-font-weight: bolder;
-}
-
-.CouponList button:hover{
-font-weight: bolder;
-border: 1.5px solid black;
-background-color: black;
-color:  rgb(189, 163, 18);
-border-top: none;
-}
-
-.CouponList form{
-float: right;
-margin-right: 50px;
-height: 21px;
-width: 200px;
-font-size: 23px;
-box-shadow: 5px 5px 10px;
-margin-top:0px;
-border: 1px solid black;
-border-radius: 0px;
-border-top: none;
-}
-
-.CouponList #name{
-	font-size: 13px;
-	width: 170px;
+.CouponList form {
   float: right;
+  margin-right: 50px;
+  height: 21px;
+  width: 200px;
+  font-size: 23px;
+  box-shadow: 5px 5px 10px;
+  margin-top: 0px;
+  border: 1px solid black;
+  border-radius: 0px;
+  border-top: none;
+}
 
-  }
+.CouponList #name {
+  font-size: 13px;
+  width: 170px;
+  float: right;
+}
 
-  .CouponList .formPrice{
-    float: left;
-    margin-left: 160px;
-    font-size: 15px;
-    width:140px;
-  }
-  
-  
+.CouponList .formPrice {
+  float: left;
+  margin-left: 160px;
+  font-size: 15px;
+  width: 140px;
+}
 
-  .CouponList #price{
-    font-size: 13px;
-    width: 65px;
-    float: left;
+.CouponList #price {
+  font-size: 13px;
+  width: 65px;
+  float: left;
   margin-left: 75px;
   margin-top: -18px;
-  }
+}
+
+
+.CouponList #name:focus {
+	background-color:rgb(189, 163, 18);
+}
