--- a/src/Components/CompanyArea/UpdateCoupon/UpdateCoupon.css
+++ b/src/Components/CompanyArea/UpdateCoupon/UpdateCoupon.css
@@ -1,17 +1,22 @@
-.UpdateCoupon button{
+.UpdateCoupon button {
     border: 1px solid rgb(0, 0, 0);
     border-radius: 5px;
-    height: 35px;
     padding-top: 4px;
-	font-size: 15px;
+    font-size: 15px;
     color: black;
-    background-color:  rgb(168, 140, 14);
-margin-top: 10px;
-box-sizing: border-box;
+    background-color: rgb(168, 140, 14);
+    margin-top: 10px;
+    box-sizing: border-box;
 }
-.UpdateCoupon span{
+
+.UpdateCoupon span {
     color: red;
-} 
-.UpdateCoupon form{
+}
+
+.UpdateCoupon form {
     border: 2px solid rgb(0, 0, 0);
-}  
+}
+
+.UpdateCoupon input {
+    width: 270px;
+}
