--- a/src/Components/CustomerArea/AllCouponList/AllCouponList.css
+++ b/src/Components/CustomerArea/AllCouponList/AllCouponList.css
@@ -1,71 +1,77 @@
-.AllCouponList .list-top-coupons{
+.AllCouponList .list-top-coupons {
 	position: absolute;
-    bottom: 0;
-    margin-bottom: 30px ;
-    float: right !important;
-    margin-right: 10px !important;
+	bottom: 0;
+	margin-bottom: 30px;
+	float: right !important;
+	margin-right: 10px !important;
 }
 
-.AllCouponsList button:focus {
-	background-color:black !important;
-	}
-.AllCouponList button{
+.AllCouponList #name:focus {
+	background-color:rgb(189, 163, 18);
+}
+.AllCouponList Button {
 	margin-top: 0px;
-	width: 100px;
+	width: 110px;
 	margin-bottom: 50px;
 	background-color: white;
-	color:  rgb(189, 163, 18);
-	margin-left: 10px;
+	color: rgb(189, 163, 18);
+	margin-left: 0px;
 	margin-right: 10px;
 	font-size: 12px;
-border: 1.5px solid black;
-border-top: none;
-height: 40px;
-font-family: cursive,Serif, Garamond, "Courier New";
-font-weight: bolder;
-}
-.AllCouponList button:hover{
+	font-family: cursive, Serif, Garamond, "Courier New";
+	border: 1px solid rgb(145, 137, 137);
+	border-top: none;
+	height: 40px;
+	padding: 0px;
 	font-weight: bolder;
-border: 1.5px solid black;
-background-color: black;
-	color:  rgb(189, 163, 18);
+}
+
+.AllCouponList Button:hover {
+	background-color: rgba(128, 127, 124, 0.137);
+	border: 2px solid black;
 	border-top: none;
 }
 
-.AllCouponList form{
+.AllCouponList button:focus {
+	background-color: black;
+	border: 2px solid rgb(189, 163, 18);
+	border-top: none;
+}
+
+.AllCouponList form {
 	float: right;
 	margin-right: 50px;
 	height: 21px;
 	width: 200px;
 	font-size: 23px;
 	box-shadow: 5px 5px 10px;
-	margin-top:0px;
+	margin-top: 0px;
 	border: 1px solid black;
-border-radius: 0px;
-border-top: none;
-  }
-  
-  .AllCouponList #name{
+	border-radius: 0px;
+	border-top: none;
+}
+
+.AllCouponList #name {
 	font-size: 13px;
 	width: 170px;
-  float: right;
-  }
+	float: right;
+}
 
-  .AllCouponList .formPrice{
-    float: left;
-    margin-left: 160px;
-    font-size: 15px;
-    width:140px;
-   }
-  
-.AllCouponList button:focus{
+.AllCouponList .formPrice {
+	float: left;
+	margin-left: 160px;
+	font-size: 15px;
+	width: 140px;
+}
+
+.AllCouponList button:focus {
 	background-color: black;
 }
-  
-  .AllCouponList #price{
-    font-size: 13px;
-    width: 65px;
-    float: left;
-  margin-left: 75px;
-  margin-top: -18px;
-    }
+
+.AllCouponList #price {
+	font-size: 13px;
+	width: 65px;
+	float: left;
+	margin-left: 75px;
+	margin-top: -18px;
+}
