--- a/src/Components/CustomerArea/CouponDetailsPurchase/CouponDetailsPurchase.css
+++ b/src/Components/CustomerArea/CouponDetailsPurchase/CouponDetailsPurchase.css
@@ -1,19 +1,23 @@
 .CouponDetailsPurchase {
   position: relative;
-	display: inline-block;
-  border: 2px dashed  black ;
+  display: inline-block;
+  border: 2px dashed black;
   padding: 7px;
   margin: 10px;
   box-shadow: 5px 5px 10px;
- font-family: Arial, Helvetica, sans-serif;
- text-align: left;
-  }
-   
-img{
-  width: auto;
-  height:120px;
-margin-right: auto;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: left;
+  padding: 10px;
+  margin: 10px;
 }
+
+img {
+  width: auto;
+  height: 120px;
+  margin-right: auto;
+  justify-content: center;
+}
+
 .container {
   position: relative;
   width: 50%;
@@ -21,13 +25,15 @@ margin-right: auto;
 
 .image {
   width: 150px;
-  height:130px;
+  height: 130px;
   -webkit-filter: contrast(130%);
   filter: contrast(130%);
   opacity: 1;
   display: block;
   transition: .5s ease;
   backface-visibility: hidden;
+  justify-content: center;
+
 }
 
 .middle {
@@ -50,12 +56,12 @@ margin-right: auto;
 }
 
 .text {
-  border:4px solid white;
+  border: 4px solid white;
   color: rgb(19, 2, 2);
   font-size: 20px;
   padding: 16px 32px;
   text-align: center;
-  }
+}
 
 .coupon-image {
   position: absolute;
@@ -64,19 +70,21 @@ margin-right: auto;
   font-size: 25px;
   color: black;
 }
-.buy{
+
+.buy {
   font-size: 30px;
 }
 
-.CouponDetailsPurchase div{
-  font-family: Serif, Garamond, "Courier New" ;
+.CouponDetailsPurchase div {
+  font-family: Serif, Garamond, "Courier New";
   text-align: center;
-  
-}
-.CouponDetailsPurchase a{
-font-size: 20px;
+
 }
 
-.CouponDetailsPurchase span{
-    font-weight: bold;
+.CouponDetailsPurchase a {
+  font-size: 20px;
+}
+
+.CouponDetailsPurchase span {
+  font-weight: bold;
 }
