--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,15 @@
-html, body , option, button, #root{
+html,
+body,
+option,
+button,
+#root {
 
   margin: 0;
   height: 100%;
   text-align: center;
   color: rgb(192, 161, 23);
   background-color: white;
-  
+
 }
 
 
@@ -20,10 +24,12 @@ form {
 }
 
 
-select, input, button {
-    font-size: x-large;
-    width: 100%;
-    box-sizing: border-box;
+select,
+input,
+button {
+  font-size: x-large;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 a {
@@ -31,25 +37,23 @@ a {
 }
 
 
-#backToHome{
+#backToHome {
   position: absolute;
   right: 3%;
   top: 25%;
-  text-decoration: none; 
-  transform: scale(1.1); 
+  text-decoration: none;
+  transform: scale(1.1);
   background-color: rgb(255, 255, 255);
   color: rgb(8, 1, 1);
   border: 1.5px solid rgb(15, 13, 13);
   border-radius: 5px;
   width: 30px;
   box-shadow: 3px 3px 10px;
-text-align: center;
-  }
-  
-  #backToHome:hover{
-background-color: rgb(255, 255, 255) ;
-color: rgb(13, 17, 218);
-border: 1px solid black;
-  }
- 
-  
+  text-align: center;
+}
+
+#backToHome:hover {
+  background-color: rgb(255, 255, 255);
+  color: rgb(13, 17, 218);
+  border: 1px solid black;
+}
