--- a/src/Components/CustomerArea/CouponCardPurchase copy/CouponCardPurchase.css
+++ b/src/Components/CustomerArea/CouponCardPurchase copy/CouponCardPurchase.css
@@ -7,13 +7,14 @@
   box-shadow: 5px 5px 10px;
   text-align: left;
   width: 580px;
-  height: 460px;
+  height: 480px;
   font-family: Serif, Garamond, "Courier New";
   font-size: 20px;
+  padding-top: 0px;
 }
 
 .CouponCardPurchase button {
-  margin-top: 55px;
+  margin-top: 45px;
   font-size: 25px;
   height: 35px;
 }
