--- a/src/Components/CustomerArea/CouponDetailsPurchase/CouponDetailsPurchase.css
+++ b/src/Components/CustomerArea/CouponDetailsPurchase/CouponDetailsPurchase.css
@@ -2,8 +2,8 @@
   position: relative;
   display: inline-block;
   border: 2px dashed black;
-  padding: 7px;
-  margin: 10px;
+  /* padding: 7px;
+  margin: 10px; */
   box-shadow: 5px 5px 10px;
   font-family: Arial, Helvetica, sans-serif;
   text-align: left;
@@ -23,17 +23,20 @@ img {
   width: 50%;
 }
 
-.image {
-  width: 150px;
-  height: 130px;
+.CouponDetailsPurchase img {
+  align-content: center;
+  align-items: center;
   -webkit-filter: contrast(130%);
   filter: contrast(130%);
   opacity: 1;
-  display: block;
+  display: block !important;
   transition: .5s ease;
+  margin-left: auto !important;
+  margin-right: auto !important;
   backface-visibility: hidden;
-  justify-content: center;
-
+  width: 170px;
+  height: 130px;
+  
 }
 
 .middle {
@@ -89,6 +92,8 @@ img {
   font-weight: bold;
 }
 
-.CouponDetailsPurchase h5{
+.CouponDetailsPurchase .company{
+  margin-bottom: 10px;
   text-align: left !important;
+  color: black;
 }
