--- a/src/Components/CustomerArea/CouponDetailsPurchase/CouponDetailsPurchase.css
+++ b/src/Components/CustomerArea/CouponDetailsPurchase/CouponDetailsPurchase.css
@@ -12,10 +12,9 @@
 }
 
 img {
-  width: auto;
   height: 120px;
   margin-right: auto;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 .container {
@@ -23,20 +22,20 @@ img {
   width: 50%;
 }
 
-.CouponDetailsPurchase img {
-  align-content: center;
-  align-items: center;
-  -webkit-filter: contrast(130%);
-  filter: contrast(130%);
+.CouponDetailsPurchase .image {
+  align-content: center !important;
+  align-items: center !important;
+  /* -webkit-filter: contrast(130%);
+  filter: contrast(130%); */
   opacity: 1;
   display: block !important;
   transition: .5s ease;
-  margin-left: auto !important;
-  margin-right: auto !important;
-  backface-visibility: hidden;
+  /* margin-left: auto !important;
+  margin-right: auto !important; */
+  /* backface-visibility: hidden; */
   width: 170px;
   height: 130px;
-  
+margin: auto;
 }
 
 .middle {
@@ -64,6 +63,7 @@ img {
   font-size: 20px;
   padding: 16px 32px;
   text-align: center;
+  margin-top: -16px;
 }
 
 .coupon-image {
