--- a/src/Components/SharedArea/Loading/Loading.css
+++ b/src/Components/SharedArea/Loading/Loading.css
@@ -1,4 +1,6 @@
-.Loading {
-	width: 200px;
-    margin: auto;
+.Loading img{
+	width: 180px;
+    height: auto;
+    margin-bottom: 300px;
+    /* margin: auto; */
 }
